Panama seasonality year: UI and validation.